--- a/src/components/project/style.css
+++ b/src/components/project/style.css
@@ -1,11 +1,15 @@
 .project {
 	max-width: 370px;
+	max-height: 350px;
+	
 	background-color: var(--project-card-bg);
 	box-shadow: var(--box-shadow);
 	border-radius: 10px;
 }
 
 .project__img {
+	width: 25rem;
+	height: 15rem;
 	border-radius: 10px;
 }
 
